[gd_scene load_steps=50 format=3 uid="uid://d8gnmkghjw4y"]

[ext_resource type="Script" uid="uid://chi0wro6852wf" path="res://gd/sheep/vehicle_body_3d.gd" id="1"]
[ext_resource type="Script" uid="uid://banxly3nima0g" path="res://scenes/sheep/playernode.gd" id="1_13bao"]
[ext_resource type="PackedScene" uid="uid://bsqs54jqh5rv2" path="res://scenes/sheep/freecam.tscn" id="2"]
[ext_resource type="AudioStream" uid="uid://cvqiobw74wtuo" path="res://assets/misc/sounds/crowd.mp3" id="3"]
[ext_resource type="AudioStream" uid="uid://bxkwekngs2no1" path="res://assets/misc/sounds/explode.mp3" id="4"]
[ext_resource type="Texture2D" uid="uid://h0ju080swc63" path="res://assets/misc/textures/explodesprite/explosion-Sheet.png" id="5"]
[ext_resource type="PackedScene" uid="uid://vowcqkf1j21j" path="res://assets/misc/models/sheep/sheep.glb" id="6"]
[ext_resource type="FontFile" uid="uid://dbj10iq6j0ahu" path="res://assets/misc/fonts/IMPACT.TTF" id="7"]
[ext_resource type="Script" uid="uid://4pqf4jnu8lhu" path="res://gd/sheep/player_label.gd" id="7_3msp5"]
[ext_resource type="Script" uid="uid://wc00dhyn7hr2" path="res://gd/misc/menu/remain.gd" id="8"]
[ext_resource type="Script" uid="uid://b404dgfmmima7" path="res://gd/sheep/detect_sheep.gd" id="8_qp0jx"]
[ext_resource type="PackedScene" uid="uid://b8tmssbc65jlc" path="res://scenes/sheep/crown.tscn" id="8_xs1nu"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://assets/misc/fonts/ariblk.ttf" id="9"]
[ext_resource type="Script" uid="uid://c4366oumxkkxv" path="res://gd/sheep/detect_dead.gd" id="9_3msp5"]
[ext_resource type="Script" uid="uid://5gf0sit3fwde" path="res://scenes/sheep/crown_mount.gd" id="9_13bao"]
[ext_resource type="Script" uid="uid://da6y6xifbmdpa" path="res://gd/misc/menu/eliminated.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://dfhu80n6k2cx8" path="res://assets/misc/sounds/baa.mp3" id="11"]
[ext_resource type="Script" uid="uid://bmdnyd7onlj4m" path="res://gd/sheep/close_call_text.gd" id="11_d13o4"]
[ext_resource type="PackedScene" uid="uid://em7larvq8lrm" path="res://scenes/menu/pause.tscn" id="12"]
[ext_resource type="Script" uid="uid://lu0vlkmgj6rg" path="res://gd/sheep/phys_cull_sphere.gd" id="17_h4534"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="21_0ouva"]
[ext_resource type="Script" uid="uid://jssubg04alog" path="res://gd/sheep/mobile_ui.gd" id="21_3aqrq"]
[ext_resource type="Texture2D" uid="uid://c5fy4rkb1h3mt" path="res://assets/misc/textures/menu/mcpe_esc_icon.png" id="22_8p863"]
[ext_resource type="Script" uid="uid://bqxyhodimgkro" path="res://gd/sheep/mobile_escape_button.gd" id="23_3aqrq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mckr2"]
atlas = ExtResource("5")
region = Rect2(0, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu6n2"]
atlas = ExtResource("5")
region = Rect2(200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_idw84"]
atlas = ExtResource("5")
region = Rect2(400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr3by"]
atlas = ExtResource("5")
region = Rect2(600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_otqp8"]
atlas = ExtResource("5")
region = Rect2(800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgna4"]
atlas = ExtResource("5")
region = Rect2(1000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrw10"]
atlas = ExtResource("5")
region = Rect2(1200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_swpcf"]
atlas = ExtResource("5")
region = Rect2(1400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m4an"]
atlas = ExtResource("5")
region = Rect2(1600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bcaq"]
atlas = ExtResource("5")
region = Rect2(1800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig1cg"]
atlas = ExtResource("5")
region = Rect2(2000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngw1e"]
atlas = ExtResource("5")
region = Rect2(2200, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecm48"]
atlas = ExtResource("5")
region = Rect2(2400, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5xjb"]
atlas = ExtResource("5")
region = Rect2(2600, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogd5d"]
atlas = ExtResource("5")
region = Rect2(2800, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxr8k"]
atlas = ExtResource("5")
region = Rect2(3000, 0, 200, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcn1b"]
atlas = ExtResource("5")
region = Rect2(3200, 0, 200, 282)

[sub_resource type="SpriteFrames" id="SpriteFrames_ib8tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mckr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu6n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr3by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otqp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgna4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrw10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swpcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m4an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bcaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig1cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngw1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecm48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5xjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogd5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxr8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcn1b")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="GDScript" id="GDScript_btye0"]
script/source = "extends Camera3D
#var amt = 0.01
#func _physics_process(delta):
	#rotate_x(amt)
	#rotate_y(amt*-1)
	#rotate_z(amt)
	#amt = amt * 1.0001
"

[sub_resource type="BoxShape3D" id="BoxShape3D_82ayb"]
size = Vector3(1, 0.42281, 1.71842)

[sub_resource type="BoxShape3D" id="BoxShape3D_kqhro"]

[sub_resource type="BoxShape3D" id="BoxShape3D_03rjd"]

[sub_resource type="SphereMesh" id="SphereMesh_3msp5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h4534"]
transparency = 1
cull_mode = 2
albedo_color = Color(1, 0.517647, 1, 0.513726)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_13bao"]
properties/0/path = NodePath("VehicleBody3D:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("VehicleBody3D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Node3D" type="Node3D"]
script = ExtResource("1_13bao")

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.47035e-08, 0, 5.96046e-08)
mass = 30.0
script = ExtResource("1")

[node name="Node" type="Node" parent="VehicleBody3D"]

[node name="Camera3D3" parent="VehicleBody3D/Node" instance=ExtResource("2")]
transform = Transform3D(0.474721, -0.000639931, -0.880136, -0.00219674, 0.999996, -0.00191194, 0.880134, 0.00284107, 0.474717, 0, 2.03773, 0)
current = false

[node name="freecamlisten" type="AudioListener3D" parent="VehicleBody3D/Node/Camera3D3"]

[node name="Crowd" type="AudioStreamPlayer" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
stream = ExtResource("3")
volume_db = -0.56

[node name="Explode" type="AudioStreamPlayer3D" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
transform = Transform3D(0.474721, -0.00219674, 0.880134, -0.000639931, 0.999996, 0.00284107, -0.880136, -0.00191194, 0.474717, 0, 0, 0)
stream = ExtResource("4")
volume_db = -11.966
pitch_scale = 1.46
max_distance = 423.72
panning_strength = 1.43
doppler_tracking = 2

[node name="explosion" type="AnimatedSprite3D" parent="VehicleBody3D/Node/Camera3D3/freecamlisten"]
transform = Transform3D(1.42416, -0.00659022, 2.6404, -0.00191979, 2.99999, 0.0085232, -2.64041, -0.00573581, 1.42415, 0.533612, -0.000719317, -0.98932)
billboard = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ib8tu")

[node name="Camera3D" type="Camera3D" parent="VehicleBody3D"]
transform = Transform3D(-1, 2.20669e-08, -1.38696e-07, -3.45601e-08, 0.918543, 0.395321, 1.36122e-07, 0.395321, -0.918543, 3.36661e-09, 2.55659, -1.96919)
doppler_tracking = 2
current = true
fov = 110.0
script = SubResource("GDScript_btye0")

[node name="AudioListener3D" type="AudioListener3D" parent="VehicleBody3D/Camera3D"]
current = true

[node name="sheep" parent="VehicleBody3D" instance=ExtResource("6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.022244, -0.525496, 0.931192)

[node name="Label3D" type="Label3D" parent="VehicleBody3D/sheep"]
transform = Transform3D(-3.36011e-08, 0, 1, 0, 0.561602, 0, -0.768704, 0, -4.37114e-08, 0.626516, 1.21547, 1.30486)
pixel_size = 0.016
shaded = true
modulate = Color(0.180575, 1, 0.99993, 1)
text = "52"
script = ExtResource("7_3msp5")

[node name="Label3D2" type="Label3D" parent="VehicleBody3D/sheep/Label3D"]
transform = Transform3D(-1, 0, 1.13728e-07, 0, 1, 0, -6.72022e-08, 0, -1, 2.08616e-07, 0, -1.25202)
pixel_size = 0.016
shaded = true
modulate = Color(0.180575, 1, 0.99993, 1)
text = "52"
width = 100.0

[node name="Crown" parent="VehicleBody3D/sheep" instance=ExtResource("8_xs1nu")]

[node name="crown_mount" type="Node3D" parent="VehicleBody3D/sheep"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7937, 0)
script = ExtResource("9_13bao")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.164907, -0.111954)
shape = SubResource("BoxShape3D_82ayb")

[node name="front_left_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.674803, -0.205165, 0.747582)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 55.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="back_left_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.674803, -0.205165, -0.921626)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 55.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="front_right_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.733593, -0.205165, 0.747582)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 55.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="back_right_wheel" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.733593, -0.205165, -0.921626)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 55.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="detect_ground" type="ShapeCast3D" parent="VehicleBody3D"]
transform = Transform3D(-1, 0, -1.74846e-07, 0, 0.5, 0, 8.74228e-08, 0, -2, 0.00803271, 0.0584974, -0.319598)
enabled = false
shape = SubResource("BoxShape3D_kqhro")

[node name="RichTextLabel" type="RichTextLabel" parent="VehicleBody3D/detect_ground"]
visible = false
texture_filter = 4
offset_left = 458.0
offset_top = 414.0
offset_right = 486.0
offset_bottom = 430.0
scale = Vector2(6.30823, 4.38483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Flight"
fit_content = true

[node name="detect_sheep" type="ShapeCast3D" parent="VehicleBody3D"]
transform = Transform3D(-1.71362, 0, -3.04028e-07, 0, 1.27566, 0, 1.49809e-07, 0, -3.47766, 0.00803272, 1.92772, -0.0757913)
shape = SubResource("BoxShape3D_kqhro")
script = ExtResource("8_qp0jx")

[node name="RichTextLabel" type="RichTextLabel" parent="VehicleBody3D/detect_sheep"]
visible = false
texture_filter = 4
offset_left = 4.00001
offset_top = 349.0
offset_right = 86.0
offset_bottom = 367.0
scale = Vector2(6.30823, 4.38483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Touching"
fit_content = true

[node name="detect_dead" type="ShapeCast3D" parent="VehicleBody3D"]
transform = Transform3D(0.954475, 0, -7.10543e-15, 0, 0.21959, 0, -3.55271e-15, 0, 2.74153, 0.00251163, 1.43951, -0.125624)
shape = SubResource("BoxShape3D_03rjd")
script = ExtResource("9_3msp5")

[node name="RichTextLabel3" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 4.0
offset_top = 414.0
offset_right = 216.0
offset_bottom = 440.0
scale = Vector2(6.30823, 4.38483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "22 remain."
script = ExtResource("8")

[node name="RichTextLabel4" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 4.0
offset_top = 27.0
offset_right = 247.0
offset_bottom = 178.0
scale = Vector2(2.4371, 2.50593)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "No sheep have been eliminated."
fit_content = true
scroll_active = false
script = ExtResource("10")

[node name="RichTextLabel2" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
visible = false
texture_filter = 4
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = -650.0
offset_top = -189.8
offset_right = -503.0
offset_bottom = -101.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.55725, 2.62599)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "

    		[color=red][tornado radius=5 freq=5]you are dead![/tornado][/color]"

[node name="RichTextLabel5" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
visible = false
texture_filter = 4
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = -611.0
offset_top = -197.8
offset_right = -464.0
offset_bottom = -109.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.55725, 2.62599)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "

    		[color=green][tornado radius=7 freq=4]you won![/tornado][/color]
"

[node name="RichTextLabel" type="RichTextLabel" parent="VehicleBody3D/detect_dead"]
texture_filter = 4
offset_left = 5.0
offset_top = -4.0
offset_right = 251.0
offset_bottom = 22.0
scale = Vector2(2.73207, 2.05483)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "CC3D v0.1 (Development)"

[node name="Bleat" type="AudioStreamPlayer3D" parent="VehicleBody3D"]
stream = ExtResource("11")
volume_db = -15.909
max_db = 0.665
max_distance = 31.03
doppler_tracking = 2

[node name="close_call_txt" type="RichTextLabel" parent="VehicleBody3D"]
texture_filter = 4
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = -496.0
offset_top = -38.8
offset_right = -373.0
offset_bottom = -15.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.55725, 2.62599)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[color=green][tornado radius=7 freq=4]close call![/tornado][/color]
"
fit_content = true
scroll_active = false
horizontal_alignment = 1
script = ExtResource("11_d13o4")

[node name="sphere" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(1, 1.50996e-07, -1.50996e-07, 1.50996e-07, -1, -1.50996e-07, -1.50996e-07, 1.50996e-07, -1, -4.47035e-08, 0, -5.96046e-08)
mesh = SubResource("SphereMesh_3msp5")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_h4534")
script = ExtResource("17_h4534")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="VehicleBody3D"]
root_path = NodePath("../..")
replication_config = SubResource("SceneReplicationConfig_13bao")

[node name="PauseMenu" parent="." instance=ExtResource("12")]

[node name="RefreshPhysicsCulling" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Mobile" type="CanvasLayer" parent="."]
script = ExtResource("21_3aqrq")

[node name="Virtual Joystick" parent="Mobile" instance=ExtResource("21_0ouva")]
offset_left = 13.0
offset_top = -179.0
offset_right = 213.0
offset_bottom = 21.0
scale = Vector2(0.6, 0.6)
action_left = "right"
action_right = "left"
action_up = "forward"
action_down = "back"

[node name="Escape" type="Button" parent="Mobile"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_top = 7.0
offset_right = 5.0
offset_bottom = 51.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_icons/icon = ExtResource("22_8p863")
action_mode = 0
button_mask = 7
script = ExtResource("23_3aqrq")

[connection signal="timeout" from="RefreshPhysicsCulling" to="." method="_on_refresh_physics_culling_timeout"]
[connection signal="pressed" from="Mobile/Escape" to="Mobile/Escape" method="_on_pressed"]
